@@ -1,6 +1,6 @@
 {
   "name": "d4log",
-  "version": "1.1.4",
+  "version": "1.2.1",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
