@@ -1,5 +1,7 @@
+v1.2.1 - ce7110
+v1.2.0 - bd3ca5
 v1.1.4 - 21f9a9
-v1.1.3 - 50f912
+v1.1.3 - cea47e
 v1.1.2 - fd9583
 v1.1.1 - d95c81
 v1.1.0 - e56877
